outra atualização grande bagarai

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -12,6 +12,9 @@
         <nav>
             <ul>
                 <li><a href="/books">Livros</a></li>
+                <li><a href="/authors">Autores</a></li>
+                <li><a href="/categories">Categorias</a></li>
+                <li><a href="/publishers">Editoras</a></li>
                 <li><a href="/users">Usuários</a></li>
                 <li><a href="/loans">Empréstimos</a></li>
             </ul>
@@ -27,3 +30,4 @@
     </footer>
 </body>
 </html>
+
