--- a/src/views/loans/form.handlebars
+++ b/src/views/loans/form.handlebars
@@ -2,21 +2,22 @@
 
 <form action="/loans" method="POST">
 
-    <label for="userId">Usuário:</label>
-    <select name="userId" id="userId" required>
+    <label>Usuário:</label>
+    <select name="UserId" required>
         <option value="">Selecione um usuário</option>
         {{#each users}}
-            <option value="{{this.id}}">{{this.name}}</option>
+        <option value="{{this.id}}">{{this.name}}</option>
         {{/each}}
     </select>
 
-    <label for="bookId">Livro:</label>
-    <select name="bookId" id="bookId" required>
+    <label>Livro:</label>
+    <select name="BookId" required>
         <option value="">Selecione um livro</option>
         {{#each books}}
-            <option value="{{this.id}}">{{this.title}} ({{this.available}} disponíveis)</option>
+        <option value="{{this.id}}">{{this.title}}</option>
         {{/each}}
     </select>
+
 
     <label for="days">Dias de empréstimo:</label>
     <input type="number" id="days" name="days" min="1" value="7" required>
